<resources>
    <string name="app_name">Food Admin</string>
    <string name="API_URL" translatable="false">http://192.168.1.5/AdminService.asmx</string>
    <string name="API_NAMESPACE" translatable="false">http://192.168.1.5/</string>
    <string name="title_home">Trang chủ</string>
    <string name="title_order">Hóa đơn</string>
    <string name="title_voucher">Voucher</string>
    <string name="title_sale">Sale</string>
    <string name="title_customer">Khách hàng</string>
    <string name="title_food">Món ăn</string>
    <string name="status_title" translatable="false">Trạng thái hóa đơn</string>
    <string name="required_payment_method" translatable="false">Chọn phương thức thanh toán</string>
    <string name="title_payment_method" translatable="false">Phương thức thanh toán</string>
    <string name="URL" translatable="false">http://192.168.0.177/TheWebService/webservice.asmx?WSDL</string>
    <string name="NAMESPACE" translatable="false">http://192.168.0.177:44321/</string>
    <string-array name="payment_method_entries">
        <item>COD</item>
        <item>Bank</item>
    </string-array>
    <string-array name="order_status_entries">
        <item>Đang giao</item>
        <item>Đã giao</item>
        <item>Đã hủy</item>
    </string-array>
    <string-array name="order_status_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string name="nav_home" translatable="false">Trang chủ</string>
    <string name="nav_order" translatable="false">Hóa đơn</string>
    <string name="nav_customer" translatable="false">Khách hàng</string>
    <string name="nav_food" translatable="false">Đồ ăn</string>
    <string name="nav_sale" translatable="false">Sale</string>
    <string name="nav_voucher" translatable="false">Voucher</string>
    <string name="nav_profile" translatable="false">Tài khoản của tôi</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>

    <string-array name="food_type_entries">
        <item>Cơm</item>
        <item>Cháo</item>
        <item>Lẩu</item>
        <item>Đồ nướng</item>
        <item>Đồ ăn nhanh</item>
        <item>Đồ ăn vặt</item>
    </string-array>
    <string-array name="sale_status_entries">
        <item>Không hoạt động</item>
        <item>Đang hoạt động</item>
    </string-array>
    <string-array name="voucher_status_entries">
        <item>Chưa sử dụng</item>
        <item>Đã sử dụng</item>
    </string-array>
</resources>